# dune-artdaq

./: .gitignore  CMakeLists.txt  CreateNewFragmentGenerator.rb  ReadMe.txt
dune-artdaq/: CMakeLists.txt
dune-artdaq/ArtModules/: BasicMetrics_module.cc  CMakeLists.txt  DuneArtdaqBuildInfo_module.cc  DuneArtdaqPrintVersionInfo_module.cc  DuneInput_source.cc  FragmentWatcher_module.cc  LbneArtdaqBuildInfo_module.cc  LbneArtdaqPrintVersionInfo_module.cc  MilliSliceDump_module.cc  PennMilliSliceDump_module.cc  RCEDiagnostic_module.cc  SSPDump_module.cc  SparsifySSP_module.cc  TPCScope_module.cc  ToyDump_module.cc  TpcMilliSliceDump_module.cc
dune-artdaq/ArtModules/DQM/: CMakeLists.txt  RootApplication_module.cc  TriggerAna_module.cc  WFViewer_module.cc
dune-artdaq/ArtModules/detail/: RawEventQueueReader.cc  RawEventQueueReader.hh
dune-artdaq/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
dune-artdaq/DAQLogger/: CMakeLists.txt  DAQLogger.cc  DAQLogger.hh
dune-artdaq/Generators/: CMakeLists.txt  CRTFragGen.hh  CRTFragGen_generator.cc  Candidate.hh  Candidate_generator.cc  FelixReceiver.hh  FelixReceiver_generator.cc  HitFinderCPUReceiver.hh  HitFinderCPUReceiver_generator.cc  HitFinderReceiver.hh  HitFinderReceiver_generator.cc  IsoMuonFinder.hh  IsoMuonFinder_generator.cc  PTMPConfig.h  PennReceiver.hh  PennReceiver_generator.cc  Playback.hh  Playback_generator.cc  SSP.hh  SSP_generator.cc  SWTrigger.hh  SWTriggerReceiver.hh  SWTriggerReceiver_generator.cc  SWTrigger_generator.cc  TPCMilliSliceSimulatorWithCopy.hh  TPCMilliSliceSimulatorWithCopy_generator.cc  TimingReceiver.hh  TimingReceiverDebug.hh  TimingReceiverDebug_generator.cc  TimingReceiver_generator.cc  ToySimulator.hh  ToySimulator_generator.cc  TpcRceReceiver.hh  TpcRceReceiver_generator.cc  TriggerBoardReader.hh  TriggerBoardReader_generator.cc  WIB2Reader.hh  WIB2Reader_generator.cc  WIBReader.hh  WIBReader_generator.cc
dune-artdaq/Generators/CRTInterface/: CMakeLists.txt  CRTInterface.cc  CRTInterface.hh  CRTdecode.cc
dune-artdaq/Generators/Felix/: CMakeLists.txt  FelixFormat.hh  FelixHardwareInterface.cc  FelixHardwareInterface.hh  FelixOnHostInterface.cc  FelixOnHostInterface.hh  FelixProtoduneReader.hpp  FelixReorder.cc  FelixReorder.hh  FelixReorderer.cc  FelixReorderer.hh  FelixReordererFacility.hh  FelixStatistics.hh  NetioHandler.cpp  NetioHandler.hh  NetioSubscriber.hh  NetioWIBRecords.h  NetioWIBRecords.hh  NetioWorker.hh  NetioWorkerNew.hh  ProducerConsumerQueue.h  ProducerConsumerQueue.hh  QueueHandler.cpp  QzCompressor.cpp  QzCompressor.hh  ReordererFacility.hh  RequestReceiver.cc  RequestReceiver.hh  Types.hh  (+4 more)
dune-artdaq/Metadata/: CMakeLists.txt  DuneMetadata_plugin.cc  MetadataManager.cc  MetadataManager.h  extract_dune_metadata.cc
dune-artdaq/OnlineMonitoring/: CMakeLists.txt  ChannelMap.cxx  DataReformatter.cxx  DataReformatter.hxx  EventDisplay.cxx  EventDisplay.hxx  MonitoringData.cxx  OnlineMonitoringBase.hxx  OnlineMonitoring_module.cc  monitoringWebSync.sh
dune-artdaq/PedestalMonitoring/: CMakeLists.txt  DataReformatter.cxx  DataReformatter.hxx  MonitoringPedestal.cxx  MonitoringPedestal.hxx  OnlinePedestal_module.cc  PedestalMonitoringBase.cxx  README
dune-artdaq/Plugins/: CMakeLists.txt  RCReporter_metric.cc
dune-artdaq/RCConnection/: CMakeLists.txt  I3JSON.cc  I3JSON.hh  RCConnection.cc  RCConnection.hh
dune-artdaq/Triggers/: CMakeLists.txt  PennBoardTrigger_module.cc  SSPTrigger_module.cc  TriggerSelector_module.cc  createNewTrigger.sh
lbne-artdaq/: CMakeLists.txt
lbne-artdaq/ArtModules/: BasicMetrics_module.cc  CMakeLists.txt  LbneArtdaqBuildInfo_module.cc  LbneArtdaqPrintVersionInfo_module.cc  MilliSliceDump_module.cc  PennMilliSliceDump_module.cc  RCEDiagnostic_module.cc  SSPDump_module.cc  SparsifySSP_module.cc  TPCScope_module.cc  ToyDump_module.cc  TpcMilliSliceDump_module.cc
lbne-artdaq/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
lbne-artdaq/DAQLogger/: CMakeLists.txt  DAQLogger.hh
lbne-artdaq/Generators/: CMakeLists.txt  PennReceiver.hh  PennReceiver_generator.cc  Playback.hh  Playback_generator.cc  SSP.hh  SSP_generator.cc  TPCMilliSliceSimulatorWithCopy.hh  TPCMilliSliceSimulatorWithCopy_generator.cc  ToySimulator.hh  ToySimulator_generator.cc  TpcRceReceiver.hh  TpcRceReceiver_generator.cc
lbne-artdaq/OnlineMonitoring/: CMakeLists.txt  ChannelMap.cxx  ChannelMap.hxx  DataReformatter.cxx  DataReformatter.h  DataReformatter.hxx  EventDisplay.cxx  EventDisplay.hxx  MonitoringData.cxx  MonitoringData.hxx  MonitoringPedestal.cxx  MonitoringPedestal.hxx  OnlineMonitoringBase.cxx  OnlineMonitoringBase.hxx  OnlineMonitoringNamespace.cxx  OnlineMonitoring_module.cc  OnlinePedestal_module.cc  detailedMap.txt  monitoringJob.sh  monitoringWebSync.sh  onlineMonitoring.fcl
lbne-artdaq/Overlays/: FragmentType.cc  FragmentType.cc~  FragmentType.hh  FragmentType.hh~  MilliSlice.cc  MilliSlice.hh  MilliSliceFragment.cc  MilliSliceFragment.hh  MilliSliceFragmentWriter.cc  MilliSliceFragmentWriter.hh  NanoSlice.cc  NanoSlice.hh  SSPFragment.cc  SSPFragment.cc~  SSPFragment.hh  SSPFragment.hh~  SSPFragmentWriter.hh  SSPFragmentWriter.hh~  ToyFragment.hh  ToyFragment.hh~  ToyFragmentWriter.hh  TpcMicroSlice.cc  TpcMicroSlice.hh  TpcMilliSlice.cc  TpcMilliSlice.hh  TpcMilliSliceFragment.cc  TpcMilliSliceFragment.hh  TpcMilliSliceWriter.cc  TpcMilliSliceWriter.hh  TpcNanoSlice.cc
lbne-artdaq/PedestalMonitoring/: CMakeLists.txt  DataReformatter.cxx  DataReformatter.hxx  MonitoringPedestal.cxx  MonitoringPedestal.hxx  PedestalMonitoringBase.cxx  README
lbne-artdaq/Plugins/: CMakeLists.txt  I3JSON.cc  I3JSON.hh  RCReporter_metric.cc  rcreporter_metric.cc
lbne-artdaq/RCConnection/: CMakeLists.txt  I3JSON.cc  I3JSON.hh  RCConnection.cc  RCConnection.hh
lbne-artdaq/Triggers/: CMakeLists.txt  ExampleTrigger_module.cc  PennBoardTrigger_module.cc  PreScaleTrigger_module.cc  SSPTrigger_module.cc  TriggerSelector_module.cc
lbne-artdaq/Version/: CMakeLists.txt  GetReleaseVersion.cc.in  GetReleaseVersion.h
(+310 files in other folders)
