#ADD_SUBDIRECTORY(utilities)

art_make(NO_PLUGINS # WAnt different link lists for modues
  LIB_LIBRARIES lbne-raw-data_Overlays lbne-artdaq_Products
)

simple_plugin(OnlineMonitoring "module" lbne-raw-data_Overlays 
  ${SIMULATIONBASE}
  ${ART_FRAMEWORK_CORE}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_SERVICES_OPTIONAL}
  ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
  ${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
  ${ART_PERSISTENCY_COMMON}
  ${ART_PERSISTENCY_PROVENANCE}
  ${ART_UTILITIES}
  ${MF_MESSAGELOGGER}
  ${MF_UTILITIES}
  ${CETLIB}
  ${ROOT_BASIC_LIB_LIST}
  lbne-artdaq_RCConnection
  lbne-artdaq_I3JSON
)
